--- a/package.json
+++ b/package.json
@@ -61,12 +61,12 @@
     "lenis": "^1.3.3",
     "lucide-react": "^0.477.0",
     "motion": "^12.6.2",
-    "next": "^15.3.2",
+    "next": "15.3.6",
     "next-safe-action": "^7.10.4",
     "next-sitemap": "4.2.3",
     "next-themes": "0.4.4",
-    "react": "19.1.0",
-    "react-dom": "19.1.0",
+    "react": "19.1.2",
+    "react-dom": "19.1.2",
     "react-fast-marquee": "^1.6.5",
     "react-hook-form": "^7.55.0",
     "react-wrap-balancer": "^1.1.1",
